tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_arithmetic_generics_arithmetic_generics_checked_cast_zeros/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Could not determine array length `(0 / (0 % 0))`, encountered error: `Evaluating `%` on `0`, `0` failed`
  ┌─ src/main.nr:9:13
  │
9 │             N
  │             -
  │

Aborting due to 1 previous error
